Fix text spacing on register page and improve themes system - closes #114

--- a/app/components/themes.styl
+++ b/app/components/themes.styl
@@ -6,6 +6,19 @@ theme-selection-color(var-bg-color, var-text-color=white)
     background-color var-bg-color
     color var-text-color if var-text-color
 
+calcDarkAccentColor(var-base-color)
+  desaturate(darken(var-base-color, 42), 20)
+
+generateBaseTheme(var-base-color)
+  background-color var-base-color
+  color calcDarkAccentColor(var-base-color)
+  theme-selection-color(darken(var-base-color, 35))
+  a
+    border-bottom-color darken(var-base-color, 35)
+    &:hover
+      color darken(calcDarkAccentColor(var-base-color), 10)
+
+
 
 
 .color-theme
@@ -14,10 +27,8 @@ theme-selection-color(var-bg-color, var-text-color=white)
     color inherit
     border-bottom-width 1px
     border-bottom-style dashed
-
     &:hover
       highlight(fade-out(white, 0.7))
-      color baseTextColor
 
   .text-color-inverse
     a, a:link
@@ -25,38 +36,28 @@ theme-selection-color(var-bg-color, var-text-color=white)
       &:hover
         border-color baseTextColor
 
+
+
+
 body
   theme-selection-color(saturate(lighten(green, 8), 30), false)
   a
     border-bottom-color linkColor
 
 .blue-theme
-  background-color blue
-  theme-selection-color(darken(blue, 35))
-  a
-    border-bottom-color darken(blue, 35)
+  generateBaseTheme(blue)
 
-
+.green-theme
+  generateBaseTheme(green2)
 
 .yellow-theme
-  background-color yellow
-  theme-selection-color(yellowAccent)
-  a
-    border-bottom-color yellowAccent
+  generateBaseTheme(yellow)
 .all-yellow-theme
   @extends .yellow-theme
   color yellowAccent
 
-
-
-.green-theme
-  background-color green2
-  theme-selection-color(darken(green, 35))
-  a
-    border-bottom-color darken(green, 35)
-
-
-
 .dark-theme
-  color grayLight
+  color darken(grayLight, 10)
   background-color dark
+  a:hover
+    color white
