--- a/app/views/directory/styles-artifact-card.styl
+++ b/app/views/directory/styles-artifact-card.styl
@@ -46,7 +46,6 @@
     max-width gd(4.5)
 
 .artcard__body
-  background-color yellow
   background-image url('/images/white-hash-30.png')
   min-height gd(2.75)
   .organization-name
@@ -54,5 +53,3 @@
     font-weight normal
     line-height 1.25em
     margin-top 0
-    //color textColorDarkOnColor
-    color darken(yellow, 35)
